# name: test_authenticate
  <class 'dict'> {
    'authentication_token': 'session_id',
  }
---
# name: test_profile
  <class 'dict'> {
    'username': 'test username',
  }
---
# name: test_register
  <class 'dict'> {
    'authentication_token': 'session_id',
  }
---
# name: test_register_duplicate_username
  <class 'dict'> {
    'detail': 'Account with given username already exist.',
  }
---
